# BScACS-Major-Project

./: CMakeLists.txt  README.md
include/: Database.h  MacOSMonitoring.h  MacOSRollback.h  WindowsJsonUtils.h  WindowsMonitoring.h  WindowsRollback.h  alert.h  encryptionUtils.h  monitoringBase.h  plistFile.h  plistFileModel.h  registryKey.h  registryKeyModel.h  rollback.h  settings.h
qml/: MacOSDashboard.qml  Main.qml  Welcome.qml  WindowsDashboard.qml
src/: Database.cpp  MacOSJsonUtils.cpp  MacOSMonitoring.cpp  MacOSRollback.cpp  WindowsJsonUtils.cpp  WindowsMonitoring.cpp  WindowsRollback.cpp  alert.cpp  encryptionUtils.cpp  main.cpp  plistFile.cpp  plistFileModel.cpp  registryKey.cpp  registryKeyModel.cpp  settings.cpp
